----------------
Release v94
----------------

Firmware:
-rebuild esp,robot,syscon + all bootloaders with latest codebase/features.

General:
-remove 0xf0 limit on serial# --> Cube fixtures will fail. Playpen Afix## may repeat!

PLAYPEN:
-show SSID "Afix##" on display
-send POWERON commands to keep cozmo alive during the test (HW change)

SOUND,ROBOT2,ROBOT3[-CE],PACKOUT[-CE]
-changed speaker test to louder frequency sweep audio
^Note: requires v94+ head firmware; modified sound generator

HEAD1,HEAD2:
-test if fixture pull-up (R82) is installed. Fail with E6 [ERROR_OUT_OF_RANGE] otherwise.


----------------
Release v93
----------------

General:
-new fixture types: ROBOT3-CE, PACKOUT-CE
-allow fixture names up to 10char on display (compress x-scaling for long names)
-external buzzer output cycles with red led for failed tests
-build-info (display) updated to "PVT v1.5"

ROBOT3[-CE]:
-write color code into robot (code written depends on standard/-CE fixture mode)
^Note: requires v93+ body firmware; modified cmd data with new color codes.

PACKOUT[-CE]:
-read/verify proper color code is set (code verified depends on standard/-CE fixture mode)
^Note: requires v93+ body firmware; modified cmd data with new color codes.

MOTOR3L,MOTOR3H:
-motor low-speed test, increased power to 1.5V for reliability with new gearbox & fixture circuit.

ROBOT1,ROBOT2,ROBOT3[-CE],PACKOUT[-CE]:
-added charge-current test; verfies charging circuit ok
^Note: requires v93+ body firmware; bug-fix to properly report battery voltage.

BODY3,ROBOT1,ROBOT2,ROBOT3[-CE],PACKOUT[-CE]:
-added battery check. low VBat causes error 621 [BAT_UNDERVOLT].
^Note: requires v93+ body firmware; bug-fix to properly report battery voltage.

RECHARGE:
-stop charging (OK) at 3.75V. error 101 [TIMEOUT] after 10min if still charging (not holding charge, or significantly dead battery).
^Note: requires v93+ body firmware; bug-fix allows robot to stay on/charging for >120s.

BODY1: